# riemannax

./: .gitignore  .mcp.json  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Makefile  README.md  RELEASE_NOTES_v0.0.3.md  SECURITY.md  STRATEGIC_IMPLEMENTATION_PLAN.md  pyproject.toml  pytest.ini
.claude/commands/: create-pr.md
.claude/commands/kiro/: spec-design.md  spec-impl.md  spec-init.md  steering-custom.md  validate-design.md  validate-gap.md
.github/: CODEOWNERS  CODERABBIT_ISSUE_REFUTATION.md  CODERABBIT_RETR_ANALYSIS.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_improvement.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  lint.yml  performance.yml  quality.yml  release.yml  tests.yml
.kiro/specs/advanced-manifold-mathematics/: design.md  requirements.md  spec.json  tasks.md
.kiro/specs/high-level-api-development/: design.md  requirements.md  spec.json  tasks.md
.kiro/specs/hyperbolic-se3-manifolds/: design.md  requirements.md  spec.json  tasks.md
.kiro/steering/: constitution.md  product.md  python_development_constitution.md  structure.md  tech.md
.serena/: project.yml
benchmarks/: __init__.py  cli.py  performance_benchmark.py
compatibility_results/: compatibility_report.txt  compatibility_results.json
design/: implementation_plan.md  roadmap.md  roadmap_en.md  strategic_roadmap.md  technical_specifications.md
docs/: PERFORMANCE.md  api.rst  build_docs.py  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  strategic_roadmap.rst  usage.rst
examples/: README.md  dynamic_dimensions_usage.py  grassmann_optimization_demo.py  manifolds_comparison_demo.py  ml_applications_showcase.py  optimizer_comparison_demo.py  so3_optimization_demo.py  spd_covariance_estimation.py  sphere_optimization_demo.py  stiefel_optimization_demo.py
examples/notebooks/: advanced_riemannian_optimization.ipynb  dynamic_dimensions_usage.ipynb  grassmann_optimization_demo.ipynb  manifolds_comparison_demo.ipynb  ml_applications_showcase.ipynb  optimizer_comparison_demo.ipynb  so3_optimization_demo.ipynb  spd_covariance_estimation.ipynb  sphere_optimization_demo.ipynb  stiefel_optimization_demo.ipynb
riemannax/: __init__.py
riemannax/api/: __init__.py  _riemannian_adam.py  detection.py  errors.py  estimators.py  flax_nnx.py  optax_adapter.py  problems.py  results.py  sklearn_estimators.py  validation.py
riemannax/core/: __init__.py  batch_ops.py  cholesky_engine.py  constants.py  device_manager.py  geodesic_connection.py  jit_decorator.py  jit_manager.py  numerical_stability.py  performance.py  performance_benchmark.py  safe_jit.py  spd_algorithm_selector.py  static_args_optimizer.py  type_system.py
riemannax/high_level_api/: __init__.py  base.py  exceptions.py
riemannax/manifolds/: __init__.py  base.py  data_models.py  errors.py  factory.py  grassmann.py  lorentz.py  numerical_stability.py  poincare_ball.py  product.py  quotient.py  se3.py  so.py  spd.py  sphere.py  stiefel.py
riemannax/optimizers/: adam.py  momentum.py  sgd.py  state.py
riemannax/problems/: base.py
riemannax/solvers/: __init__.py  minimize.py  optimistix_adapter.py
tests/: __init__.py  conftest.py  test_batch_optimization.py  test_comprehensive_numerical_stability.py  test_end_to_end_jit.py  test_high_level_api.py  test_integration.py  test_integration_hyperbolic_se3.py  test_integration_manifolds.py  test_jit_compatibility.py  test_jit_testing_framework.py  test_manifold_integration.py  test_performance_benchmark.py  test_performance_validation.py  test_property_based_manifolds.py
tests/api/: test_detection.py  test_estimators.py  test_flax_nnx.py  test_manifold_parameter.py  test_manifold_pca.py  test_matrix_completion.py  test_optax_adapter.py  test_results.py  test_retr_projection.py  test_robust_covariance.py  test_sklearn_estimators.py  test_validation.py
tests/core/: test_base_manifold_jit_removal.py  test_batch_ops.py  test_cholesky_engine.py  test_constants.py  test_device_manager.py  test_geodesic_connection.py  test_internationalization.py  test_jit_cache_functionality.py  test_jit_decorator.py  test_jit_decorator_application.py  test_jit_decorator_enhancements.py  test_jit_manager.py  test_manifold_documentation.py  test_mathematical_verification.py  test_numerical_stability.py  test_performance.py  test_performance_benchmark_functionality.py  test_performance_benchmarking.py  test_safe_jit.py  test_spd_algorithm_selector.py  test_static_args_optimization.py  test_type_system.py
tests/high_level_api/: __init__.py  test_base_estimator.py
tests/manifolds/: test_base_jit.py  test_data_models.py  test_errors.py  test_factory.py  test_grassmann.py  test_grassmann_complexity_benchmarks.py  test_grassmann_jit.py  test_grassmann_performance_comparison.py  test_grassmann_svd_exp.py  test_jax_jit_compatibility.py  test_lorentz.py  test_lorentz_geometric_ops.py  test_lorentz_parallel_transport.py  test_manifold_factory.py  test_numerical_stability.py  test_numerical_stability_manifolds.py  test_poincare_ball.py  test_poincare_ball_advanced.py  test_poincare_ball_geometric.py  test_product.py  test_quotient.py  test_se3.py  test_se3_jit.py  test_so.py  test_so_jit.py  test_spd.py  test_spd_affine_invariant_transport.py  test_spd_jit.py  test_spd_pole_ladder.py  test_spd_schilds_ladder.py  test_sphere.py  test_sphere_jit.py  test_stiefel.py  test_stiefel_jit.py
tests/optimizers/: test_adam.py  test_momentum.py  test_sgd.py
tests/problems/: test_base.py
tests/solvers/: test_minimize.py  test_optimistix_adapter.py
tests/utils/: __init__.py  compatibility.py  jit_testing.py
