[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "riemannax"
version = "0.0.3"
description = "JAX-native Riemannian manifold optimization"
readme = "README.md"
authors = [{ name = "mary", email = "mary.lv416e@gmail.com" }]
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4.0",
    "jaxtyping>=0.2.0",
    "matplotlib>=3.10.3",
    "numpy>=1.20.0",
    "optax>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "pytest>=7.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-timeout>=2.1.0",
    "black==23.7.0",
    "mypy>=1.8.0",
    "types-requests",
    "types-setuptools",
]
docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "myst-parser>=2.0.0",
    "nbsphinx>=0.9.0",
    "matplotlib>=3.7.5",
]
examples = [
    "matplotlib>=3.7.5",
    "pandas>=1.3.0",
    "seaborn>=0.13.2",
    "jupyter>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["riemannax"]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    ".git",
    ".eggs",
    ".github",
    ".venv",
    "build",
    "examples",
    "tests",
    "docs",
    "dist",
    "venv",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "N803",
    "N806",
    "D203", # one-blank-line-before-class (conflicts with D211)
    "D212", # multi-line-summary-first-line (conflicts with D213)
    "E501", # line too long (managed by formatter)
    "E741", # ambiguous variable name (e.g. i, j, k)
]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-third-party = ["numpy", "jax", "optax"]

[tool.mypy]
# Strict mode configuration
python_version = "3.12"
strict = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_any_unimported = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
implicit_reexport = false
strict_equality = true
no_implicit_optional = true
files = ["riemannax/"]
exclude = ["tests/.*", "examples/.*", "benchmarks/.*"]
follow_imports = "silent"

# Performance and error reporting
show_error_codes = true
show_column_numbers = true
pretty = true
color_output = true

# Paths and module discovery
mypy_path = "."
namespace_packages = true
explicit_package_bases = true

# Third-party library configuration
[[tool.mypy.overrides]]
module = [
    "jax.*",
    "jax.numpy.*",
    "jax.random.*",
    "optax.*",
    "matplotlib.*",
    "numpy.*",
]
ignore_missing_imports = true

# Test files - slightly relaxed rules
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_any_unimported = false
warn_return_any = false

# Examples - relaxed rules for documentation
[[tool.mypy.overrides]]
module = "examples.*"
disallow_untyped_defs = false
disallow_any_unimported = false

[tool.coverage.run]
source = ["riemannax"]
omit = [
    "riemannax/core/static_args_optimizer.py",  # Dead code, not used anywhere
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
